Dodanie zarządzania użytkownikami. Edycja jeszcze nie działa.

--- a/IO2017/src/main/resources/templates/fragments/header.html
+++ b/IO2017/src/main/resources/templates/fragments/header.html
@@ -1,5 +1,14 @@
 <div th:fragment="header">
 	<div style="margin-bottom: 10px; border: solid;">
    		This is the header of the application.
+   		<div style="float: right;">
+   			<div sec:authorize="hasRole('ROLE_ADMIN')">
+   			<a th:href="@{/admin/users}">PANEL ADMINISTRACYJNY</a>
+   			
+   			</div>
+   			 <form th:action="@{/logout}" method="post">
+            <input type="submit" value="Wyloguj"/>
+        </form>
+   		</div>
    	</div>
 </div>
