Obsługa błędu 403 (brak uprawnień) i 404 (nie ma takiej strony).
Zmiana nazwy pakietu głównego z hello na io2017

Poprawna edycja użytkownika

--- a/IO2017/src/main/resources/templates/edit_user.html
+++ b/IO2017/src/main/resources/templates/edit_user.html
@@ -11,7 +11,7 @@
     	<p>Login: <input type="text" th:field="*{user.userName}" /></p>
     	<input type="hidden" th:field="*{user.userId}" />
     	<input type="hidden" th:field="*{user.password}" />
-    	<p>Nowe hasło: <input type="text" id="_newPassword" name="_newPassword" /> 
+    	<p>Nowe hasło: <input type="text" id="newPassword" name="newPassword" /> 
     		<span style="color:gray;"> (zostaw puste jak bez zmiany) </span> </p>
         <p>Email: <input type="text" th:field="*{user.email}" /></p>
         <input type="hidden" name="_roleAdmin" th:value="${roleAdmin}"/>
