--- a/IO2017/src/main/resources/templates/admin_users.html
+++ b/IO2017/src/main/resources/templates/admin_users.html
@@ -13,10 +13,12 @@
       	<tr>
 	        <th>ID</th>
 	        <th>Login</th>
+	        <th>Edycja</th>
 	      </tr>
 	      <tr th:each="user : ${users}">
 	        <td th:text="${user.userId}"></td>
 	        <td th:text="${user.userName}"></td>
+	        <td><a th:href="@{/admin/users/editUser(id=${user.userId})}">Edytuj</a></td>
 	      </tr>
 	    </table>
 	    
