--- a/IO2017/src/main/resources/templates/admin_users.html
+++ b/IO2017/src/main/resources/templates/admin_users.html
@@ -8,17 +8,19 @@
         <p> <a th:href="@{/admin}">Panel administacyjny</a> </p>
         <p> <a th:href="@{/admin/users/newUser}">Nowy użytkownik</a> </p>
         <h1>Użytkownicy:</h1>
-        
+        <p>My id: <span th:text="${myId}"></span></p>
         <table border="1">
       	<tr>
 	        <th>ID</th>
 	        <th>Login</th>
 	        <th>Edycja</th>
+	        <th>Usuń</th>
 	      </tr>
 	      <tr th:each="user : ${users}">
 	        <td th:text="${user.userId}"></td>
 	        <td th:text="${user.userName}"></td>
 	        <td><a th:href="@{/admin/users/editUser(id=${user.userId})}">Edytuj</a></td>
+	        <td><a th:href="@{/admin/users/deleteUser(id=${user.userId})}">Usuń</a></td>
 	      </tr>
 	    </table>
 	    
@@ -29,11 +31,24 @@
 	        <th>ID</th>
 	        <th>Login</th>
 	        <th>Edycja</th>
+	        <th>Usuń</th>
 	      </tr>
 	      <tr th:each="user : ${admins}">
 	        <td th:text="${user.userId}"></td>
 	        <td th:text="${user.userName}"></td>
-	        <td><a th:href="@{/admin/users/editUser(id=${user.userId})}">Edytuj</a></td>
+	        <td>
+	        	<a th:if="${myId} != ${user.userId}" th:href="@{/admin/users/editUser(id=${user.userId})}">Edytuj</a>
+	        	<!--  dla aktualnie zalogowanego admina -->
+	        	<a th:if="${myId} == ${user.userId}" th:href="@{/admin/users/editUser(id=${user.userId})}">To Ty</a>
+	        </td>
+	        <td>
+	        	<a th:if="${myId} != ${user.userId}" th:href="@{/admin/users/deleteUser(id=${user.userId})}">Usuń</a>
+	        	<!--  dla aktualnie zalogowanego admina -->
+	        	<span th:if="${myId} == ${user.userId}" th:href="@{/admin/users/deleteUser(id=${user.userId})}">To Ty</span>
+	        </td>
+	        
+	        <td></td>
+	        
 	      </tr>
 	    </table>
         
