--- a/IO2017/src/main/resources/templates/login.html
+++ b/IO2017/src/main/resources/templates/login.html
@@ -2,20 +2,20 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
     <head>
-        <title>Spring Security Example </title>
+        <title>Strona logowania - IO2017</title>
     </head>
     <body>
     	<div th:replace="fragments/header :: header"> </div>
         <div th:if="${param.error}">
-            Invalid username and password.
+           	Błędny login lub hasło, lub użytkownik bez aktywacji.
         </div>
         <div th:if="${param.logout}">
-            You have been logged out.
+            Zostałeś wylogowany.
         </div>
         <form th:action="@{/login}" method="post">
-            <div><label> User Name : <input type="text" name="username"/> </label></div>
-            <div><label> Password: <input type="password" name="password"/> </label></div>
-            <div><input type="submit" value="Sign In"/></div>
+            <div><label> Login : <input type="text" name="username"/> </label></div>
+            <div><label> Hasło: <input type="password" name="password"/> </label></div>
+            <div><input type="submit" value="Zaloguj"/></div>
         </form>
         
         <div th:replace="fragments/footer :: footer"> </div>
