--- a/IO2017/src/main/resources/templates/admin.html
+++ b/IO2017/src/main/resources/templates/admin.html
@@ -2,12 +2,18 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
     <head>
         <title>Spring Security Example</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet"
+	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<script
+	src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+<script
+	src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     </head>
     <body>
     	<div th:replace="fragments/header :: header"> </div>
-        <h1>Panel administracyjny!</h1>
-
-        <p>Zarządzanie użytkownikami:  <a th:href="@{/admin/users}">kliknij</a> </p>
+        <h1>Panel administracyjny</h1>
+		<a href="@{/admin/users}" class="btn btn-primary" role="button">Zarządzanie użytkownikami</a>
         
         <div th:replace="fragments/footer :: footer"> </div>
     </body>
