--- a/IO2017/src/main/resources/templates/home.html
+++ b/IO2017/src/main/resources/templates/home.html
@@ -1,13 +1,22 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
-    <head>
-        <title>Spring Security Example</title>
-    </head>
-    <body>
-    	<div th:replace="fragments/header :: header"> </div>
-        <h1>Witaj na stronie do nauki fiszek!</h1>
-        <a th:href="@{/login}">Tutaj można się zalogować</a>
-        
-        <div th:replace="fragments/footer :: footer"> </div>
-    </body>
+<html xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:th="http://www.thymeleaf.org"
+	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+<head>
+<title>Spring Security Example</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet"
+	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<script
+	src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+<script
+	src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+</head>
+<body>
+	<div th:replace="fragments/header :: header"></div>
+	<h1>Witaj na stronie do nauki fiszek!</h1>
+	<a th:href="@{/login}">Tutaj można się zalogować</a>
+
+	<div th:replace="fragments/footer :: footer"></div>
+</body>
 </html>
