--- a/IO2017/src/main/resources/templates/errorPage.html
+++ b/IO2017/src/main/resources/templates/errorPage.html
@@ -2,9 +2,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
     <head>
         <title>Spring Security Example</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1"/>
 <link rel="stylesheet"
-	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
 <script
 	src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
 <script
@@ -15,8 +15,7 @@
         <h1>Wystąpił błąd</h1>
         <h3 th:text="${errorName}"> </h3>
         <p th:text="${errorInfo}"></p>
-        <a href="@{/}" class="btn btn-info" role="button">Link Button</a>
-        <a th:href="@{/}">Przejdź na stronę główną</a>
+        <a th:href="@{/}" class="btn btn-info" role="button">Przejdź na stronę główną</a>
         <!-- wypisywanie wszystkich atrybutów dostępnych w thymeleaf
         <table>
 		<tr th:each="var : ${#vars}">
