--- a/IO2017/src/main/resources/templates/fragments/footer.html
+++ b/IO2017/src/main/resources/templates/fragments/footer.html
@@ -1,20 +1,19 @@
-<head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<!-- <head>
+<meta name="viewport" content="width=device-width, initial-scale=1"/>
 <link rel="stylesheet"
 	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <script
 	src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
 <script
 	src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-</head>
+</head> -->
 <div th:fragment="footer">
 	<nav class="navbar navbar-fixed-bottom navbar-inverse">
 		<div class="navbar-header">
 			<p class="navbar-text">
-				Strona stworzona w ramach przedmiotu Inżynieria Oprogramowania <br>
+				Strona stworzona w ramach przedmiotu Inżynieria Oprogramowania <br/>
 				Copyright © 2017 <em>MG, DO, WO, MP</em>
 			</p>
-			<br>
 		</div>
 		<ul class="nav navbar-nav navbar-right">
 			<li><a href="#">Skontaktuj się z nami</a></li>
