--- a/IO2017/src/main/resources/templates/fragments/header.html
+++ b/IO2017/src/main/resources/templates/fragments/header.html
@@ -1,12 +1,12 @@
-<head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<!-- <head>
+<meta name="viewport" content="width=device-width, initial-scale=1"/>
 <link rel="stylesheet"
-	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
 <script
 	src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
 <script
 	src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-</head>
+</head> -->
 <div th:fragment="header">
 	<nav class="navbar navbar-fixed-top navbar-inverse">
 		<div class="container-fluid">
@@ -14,15 +14,16 @@
 				<a class="navbar-brand" href="#">WebSiteName</a>
 			</div>
 			<ul class="nav navbar-nav navbar-right" sec:authorize="!isAuthenticated()">
-				<li><a href="@{/login}">Zaloguj</a></li>
-				<li><a href="@{/register}">Rejestracja</a></li>
+				<li><a th:href="@{/login}">Zaloguj</a></li>
+				<li><a th:href="@{/register/new}">Rejestracja</a></li>
 			</ul>
 			<ul class="nav navbar-nav navbar-right" sec:authorize="isAuthenticated()">
 				<li>Imię</li> <!-- TODO: imię i nazwisko użytkownika -->
 				<li>Nazwisko</li>
-				<li> <p>
+				<li>
 				<form th:action="@{/logout}" method="post">
 				<button type="submit" class="btn btn-default">Wyloguj</button>
+				</form>
 				</li>
 			</ul>
 			<ul class="nav navbar-nav navbar-right" sec:authorize="isAuthenticated()">
