--- a/IO2017/src/main/resources/templates/admin_users.html
+++ b/IO2017/src/main/resources/templates/admin_users.html
@@ -4,10 +4,10 @@
 	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
 <title>Spring Security Example</title>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta charset="utf-8"/>
+<meta name="viewport" content="width=device-width, initial-scale=1"/>
 <link rel="stylesheet"
-	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
 <script
 	src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
 <script
@@ -15,8 +15,8 @@
 </head>
 <body>
 	<div th:replace="fragments/header :: header"></div>
-	<a href="@{/admin}" class="btn btn-primary" role="button">Panel administracyjny</a>
-	<a href="@{/admin/users/newUse}" class="btn btn-default" role="button">Nowy użytkownik</a>
+	<a th:href="@{/admin}" class="btn btn-primary" role="button">Panel administracyjny</a>
+	<a th:href="@{/admin/users/newUser}" class="btn btn-default" role="button">Nowy użytkownik</a>
 	<h1>Użytkownicy:</h1>
 	<p>
 		My id: <span th:text="${myId}"></span>
